# VORACLE

./: .env.example  .gitignore  PROJECT.md  README.md  grid_valorant_series.json  pyproject.toml  railway.json  requirements.txt
apps/: __init__.py
apps/api/: __init__.py  main.py
apps/api/routers/: __init__.py  report.py  team.py
apps/web/: .env.production  package-lock.json  package.json  tailwind.config.ts  vercel.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/report/[team]/: page.tsx
apps/web/src/components/charts/: MapBarChart.tsx  PlayerComparison.tsx  TrendChart.tsx  index.ts
apps/web/src/components/layout/: Header.tsx
apps/web/src/components/report/: HowToBeat.tsx  InsightCard.tsx  InsightCardNew.tsx  MapPerformance.tsx  MapVetoCard.tsx  PlayerStats.tsx  RadarChart.tsx  SidePerformance.tsx  StatusPanel.tsx  TeamHeader.tsx
apps/web/src/components/search/: TeamSearch.tsx
apps/web/src/components/ui/: Badge.tsx  Card.tsx  ChecklistBlock.tsx  ConfidenceBadge.tsx  DataSourceBadge.tsx  Progress.tsx  Skeleton.tsx  StatPill.tsx  TrendAlertStrip.tsx
apps/web/src/hooks/: useReport.ts
apps/web/src/lib/: api.ts  utils.ts
apps/web/src/styles/: tokens.ts
apps/web/src/types/: report.ts
scripts/: build_report.py  explore_grid.py  fetch_schema.py  inspect_schema.py  test_grid_access.py  test_live_report.py  test_multiple_teams.py
